Fix bug with hot spot overlap (#975).

--- a/src/css/pannellum.css
+++ b/src/css/pannellum.css
@@ -30,7 +30,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
 }
 
 .pnlm-grab {
